k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: alpine
  labels:
    app: alpine
spec:
  replicas: 3
  selector:
    matchLabels:
      app: alpine
  template:
    metadata:
      labels:
        app: alpine
    spec:
      containers:
        - name: alpine
          image: alpine:latest
          ports:
            - containerPort: 8080
              name: rest-api
            - containerPort: 8089
              name: beacon
            - containerPort: 8090
              name: broadcast
            - containerPort: 9000
              name: protocol
          readinessProbe:
            httpGet:
              path: /status
              port: rest-api
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /status
              port: rest-api
            initialDelaySeconds: 15
            periodSeconds: 20
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 512Mi
